--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -15,11 +15,15 @@ body {
 }
 
 #main {
-  padding-top: 60px;
+  padding-top: 0px;
   margin: 0 auto;
 }
 .ace_editor {
-	height: 200px;
+	height: 400px;
+}
+
+.container2 {
+  padding: 30px 30px;
 }
 
 @import 'directives/main';
